# llama-3.2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_engine.sh  export_model.py  generate_example.py  llama3.2-1B-base.pth  llama3.2-1B-instruct.pth  llama3.2-3B-base.pth  llama3.2-3B-instruct.pth  main.py  model.py  model_customrope.py  requirements.txt  run_engine.py  tokenizer.py
.ipynb_checkpoints/: model-checkpoint.py
src/: CustomRoPE.cpp  CustomRoPECreator.cpp  CustomRoPEKernel.cu  CustomRoPEKernel.h  CustomRoPEPlugin.cpp  CustomRoPEPlugin.h  FusedRoPERMSNorm.cpp  FusedRoPERMSNormCreator.cpp  FusedRoPERMSNormKernel.cu  FusedRoPERMSNormKernel.h  FusedRoPERMSNormPlugin.cpp  FusedRoPERMSNormPlugin.h  test_kernel.cu
